<resources>
    <string name="app_name">Canvas</string>
    <string name="name">name:</string>
    <string name="email">email:</string>
    <string name="password">password:</string>
    <string name="confirm_password">confirm password:</string>
    <string name="address">address:</string>
    <string name="login">Login</string>
    <string name="forget_password"><u><b>forget password?</b></u></string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="you_have_account_already"><u><i>you have account already !!</i></u></string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">home</string>
    <string name="logout">logout</string>
    <string name="about_us">about_us</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="send_message">send Message</string>
    <string name="edit">edit</string>
    <string name="edit_profile">edit profile</string>
</resources>