<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:gravity="center"
    android:textSize="60sp"
    android:textColor="@android:color/holo_orange_dark"/>
<ImageView
    android:layout_width="120sp"
    android:layout_height="120sp"
    android:layout_gravity="center"
    android:src="@drawable/avatar"
    android:scaleType="centerInside"
    android:id="@+id/avatar"
    android:layout_marginTop="50sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/you_have_account_already"
            android:gravity="center"
            android:id="@+id/Goto_Login"
            android:layout_marginTop="20sp"
            android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75sp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/relative">
        <EditText
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/name"
            android:inputType="text"
            android:backgroundTint="@android:color/white"
            android:textSize="25sp"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/holo_orange_dark"/>
        <EditText
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableEnd="@drawable/ic_baseline_email_24"
            android:backgroundTint="@android:color/white"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/holo_orange_dark"/>

        <EditText
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:drawableEnd="@drawable/password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:backgroundTint="@android:color/white"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/holo_orange_dark"/>

        <EditText
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/password"
            android:id="@+id/confirmPassword"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:backgroundTint="@android:color/white"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/holo_orange_dark"/>
        <EditText
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:inputType="text"
            android:hint="@string/address"
            android:drawableEnd="@drawable/ic_baseline_add_location_24"
            android:backgroundTint="@android:color/white"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/holo_orange_dark"/>
    </LinearLayout>
    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/rectangle"
        android:id="@+id/signup"
        android:textSize="20sp"
        android:text="@string/sign_up"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:progressDrawable="@drawable/custom_prograss"
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progress_circular"/>
    </LinearLayout>
</ScrollView>