<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_profile"
    android:gravity="center"
    tools:context=".EditProfile">
    <FrameLayout
        android:layout_width="100sp"
        android:layout_height="140sp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Image_profile_Editing"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="top|center_horizontal"
            android:src="@drawable/user_circle" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/EditingImage"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center|bottom"
            android:src="@drawable/ic_photo_camera_edit_tools_svgrepo_com"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="25sp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:id="@+id/EditingName"
        android:inputType="text"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:drawableEnd="@drawable/ic_baseline_person_24"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="25sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/EditingAddress"
            android:inputType="text"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:drawableEnd="@drawable/ic_baseline_add_location_24"/>
    </LinearLayout>
    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/rectangle"
        android:id="@+id/Edit_button"
        android:textSize="20sp"
        android:text="@string/edit"/>

</LinearLayout>